--- a/index.html
+++ b/index.html
@@ -17,22 +17,32 @@
       <img class="logo" src="./logoMedical.png" alt="Logo de la mini app" />
     </header>
 
-      <label for="aporte">Aportes</label>
-      <input type="number" id="aporte1" />
-      <input type="number" id="aporte2" />
-      <input type="number" id="aporte3" />
-      <input type="number" id="aporte4" />
-      <br />
-      <label for="adultos">Adultos</label>
-      <input type="number" id="adultos" placeholder="Cantidad de adultos - Campo Obligatorio" required />
-      <label for="menores">Menores</label>
-      <input type="number" id="menores" placeholder="Cantidad de menores" required />
-      <div id="mensaje-error"></div>
+    <label for="aporte">Aportes</label>
+    <input type="number" id="aporte1" />
+    <input type="number" id="aporte2" />
+    <input type="number" id="aporte3" />
+    <input type="number" id="aporte4" />
+    <br />
+    <label for="adultos">Adultos</label>
+    <input
+      type="number"
+      id="adultos"
+      placeholder="Cantidad de adultos - Campo Obligatorio"
+      required
+    />
+    <label for="menores">Menores</label>
+    <input
+      type="number"
+      id="menores"
+      placeholder="Cantidad de menores"
+      required
+    />
+    <div id="mensaje-error"></div>
 
-      <div>
-        <button onclick="calcular()">Calcular</button>
-        <button type="button" id="borrar">Borrar</button>
-      </div>
+    <div>
+      <button onclick="calcular()">Calcular</button>
+      <button type="button" id="borrar">Borrar</button>
+    </div>
     <p>Sueldo bruto: <span id="sueldo_bruto"></span></p>
     <!-- <p>Sueldo bruto 1: <span id="sueldo_bruto_1"></span></p>
     <p>Sueldo bruto 2: <span id="sueldo_bruto_2"></span></p> -->
@@ -42,7 +52,7 @@
     <p>Aporte Total: <span id="aporte_total"></span></p>
     <p>Diferencia Corp.: <span id="dif_corp"></span></p>
     <p>Diferencia VIP <span id="dif_vip"></span></p>
-    <footer>Hecho con amor por Eze para Leila</footer>
+    <footer>Hecho con <img src="./LyE.gif" alt="Corazón animado" class="corazon-gif"> por Eze para Leila</footer>
     <script src="app.js"></script>
   </body>
 </html>
