actualizacion de precios

--- a/index.html
+++ b/index.html
@@ -52,7 +52,17 @@
     <p>Aporte Total: <span id="aporte_total"></span></p>
     <p>Diferencia Corp.: <span id="dif_corp"></span></p>
     <p>Diferencia VIP <span id="dif_vip"></span></p>
-    <footer>Hecho con <img src="./LyE.gif" alt="Corazón animado" class="corazon-gif"> por Eze para Leila</footer>
+    <!-- <div id="urlLinks"> -->
+      <!-- <button></button> -->
+      <!-- <button></button> -->
+      <!-- <button></button> -->
+      <!-- <button></button> -->
+      <!-- <button></button> -->
+    <!-- </div> -->
+
+    
+
+    <footer>Hecho con <img src="./LyE.gif" alt="Te Amo MI AMOR!" class="corazon-gif"> por Eze para Leila</footer>
     <script src="app.js"></script>
   </body>
 </html>
