--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
     <div id="buttonContainer">
       <div class="buttonContainer">
         <button class="buttonIcon" id="button1" onclick="openURL('https://serviciosweb.afip.gob.ar/TRAMITES_CON_CLAVE_FISCAL/MISAPORTES/app/basica.aspx')">
-          <img src="./Img/Afip-Logo.jpg" alt="Aportes en línea" />
+          <img src="./Img/Afip-Logo.webp" alt="Aportes en línea" />
         </button>
         <span class="buttonText">Aportes en línea</span>
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button2" onclick="openURL('https://www.sssalud.gob.ar/index.php?cat=consultas&page=busopc')">
-          <img src="./Img/Miargentina-azul.png" alt="Padrón de Opciones" />
+          <img src="./Img/Miargentina-azul.webp" alt="Padrón de Opciones" />
         </button>
         <span class="buttonText">Padrón de Opciones</span>
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button3" onclick="openURL('http://servicioswww.anses.gob.ar/ooss2/')">
-          <img src="./Img/Anses-Logo.png" alt="Codem" />
+          <img src="./Img/Anses-Logo.webp" alt="Codem" />
         </button>
         <span class="buttonText">Codem</span>
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button4" onclick="openURL('https://www.sssalud.gob.ar/index.php?user=GRAL&page=bus650')">
-          <img src="/Img/Miargentina-blanco.png" alt="Padrón de Beneficiarios" />
+          <img src="/Img/Miargentina-blanco.webp" alt="Padrón de Beneficiarios" />
         </button>
         <span class="buttonText">Padrón de Beneficiarios</span>
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button5" onclick="openURL('https://servicioswww.anses.gob.ar/censite/index.aspx')">
-          <img src="/Img/Anses-Cf.png" alt="Certificación Negativa" />
+          <img src="/Img/Anses-Cf.webp" alt="Certificación Negativa" />
         </button>
         <span class="buttonText">Certificación Negativa</span>
       </div>
