prueba mismos logos

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button4" onclick="openURL('https://www.sssalud.gob.ar/index.php?user=GRAL&page=bus650')">
-          <img src="/Img/miargblanco.webp" alt="Padrón de Beneficiarios" />
+          <img src="./Img/miargentinaAzul.jpeg" alt="Padrón de Beneficiarios" />
         </button>
         <span class="buttonText">Padrón de Beneficiarios</span>
       </div>
       <div class="buttonContainer">
         <button class="buttonIcon" id="button5" onclick="openURL('https://servicioswww.anses.gob.ar/censite/index.aspx')">
-          <img src="/Img/ansesblanc.png" alt="Certificación Negativa" />
+          <img src="./Img/ansesLogo.jpeg" alt="Certificación Negativa" />
         </button>
         <span class="buttonText">Certificación Negativa</span>
       </div>
