logos de botones corregidos

--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@
     <!-- <p>Aporte a OS 1: <span id="aporte_os_1"></span></p>
     <p>Aporte a OS 2: <span id="aporte_os_2"></span></p> -->
     <p>Aporte Total: <span id="aporte_total"></span></p>
-    <p>Diferencia Corp.: <span id="dif_corp"></span></p>
-    <p>Diferencia VIP <span id="dif_vip"></span></p>
+    <p>Diferencia Corporativo:</p>
+    <span id="dif_corp"></span>
+    <p>Diferencia VIP:</p>
+    <span id="dif_vip"></span>
+
+    <hr>
+    <hr style="width: 100%;">
 
     <div id="buttonContainer">
       <div class="buttonContainer">
