--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
       <button onclick="calcular()">Calcular</button>
       <button type="button" id="borrar">Borrar</button>
     </div>
+
+    <div id="resultados">
     <p>Sueldo bruto: <span id="sueldo_bruto"></span></p>
     <!-- <p>Sueldo bruto 1: <span id="sueldo_bruto_1"></span></p>
     <p>Sueldo bruto 2: <span id="sueldo_bruto_2"></span></p> -->
@@ -54,6 +56,7 @@
     <span id="dif_corp"></span>
     <p>Diferencia VIP:</p>
     <span id="dif_vip"></span>
+  </div>
 
     <hr>
     <hr style="width: 100%;">
